# bdp

./: .dockerignore  .env.docker  .env.example  .env.ingest  .env.test.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_READY.md  GENBANK_IMPLEMENTATION_SUMMARY.md  GENBANK_REFSEQ_DESIGN.md  GENBANK_REFSEQ_IMPLEMENTATION_PLAN.md  GENBANK_STATUS.md  GENBANK_TESTING_GUIDE.md  GENBANK_VERSION_DISCOVERY_CHECKLIST.md  GENBANK_VERSION_DISCOVERY_IMPLEMENTATION.md  GO_QUICK_START.md  GO_VERSION_DISCOVERY_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  NCBI_TAXONOMY_PHASE6_COMPLETION.md  NCBI_TAXONOMY_STATUS.md  NCBI_TAXONOMY_TESTING.md  README.md  ROADMAP.md  TECHNICAL_DEBT_REMEDIATION_REPORT.md  TECHNICAL_DEBT_VALIDATION.md  THIRD_PARTY_ATTRIBUTIONS.md  clippy.toml  dist-workspace.toml  docker-compose.yml  justfile  rustfmt.toml
crates/bdp-cli/: Cargo.toml  bdp.yml
crates/bdp-cli/.bdp/: machine-id
crates/bdp-cli/migrations/: 20260116000001_create_cache_tables.sql
crates/bdp-cli/src/: checksum.rs  config.rs  error.rs  gitignore.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  progress.rs
crates/bdp-cli/tests/: query_e2e_tests.rs  search_e2e_tests.rs
crates/bdp-common/: Cargo.toml
crates/bdp-common/src/: checksum.rs  error.rs  lib.rs  logging.rs
crates/bdp-ingest/: Cargo.toml  README.md
crates/bdp-ingest/src/: lib.rs  main.rs  version_mapping.rs
crates/bdp-server/: Cargo.toml
crates/bdp-server/.sqlx/: query-02838989c84b854009e2946773e3f5ca5b80585f43d37c272e7ea6300212c7fe.json  query-058cb1d338b037dd5d6be130fc5681550523b8b095b19c9e1f072c597fb85b93.json  query-0b9cdc27b68f09b33fea015790bcc1114b06fec05b164043e8038b47b1313f6c.json  query-0c20a743c0e0a14eb5c376b9c02f1165c4771b47dd4dc6a3edf3d8871f997d4d.json  query-0d0b9ccd009e40f5404000dad1be1ae0237f5e8e8b5b2ac963df637326a8fd8d.json  query-16d319e190e4b85617d85a34af6b0d5477fef3f61927913394a3d24738f54388.json  query-20677c6192839b15c5da4f62668bbc73b770035662abad8e9091e44fefdce062.json  query-265aebe460c7e3653f7bc9c3c663be7f0466389811907f96f0c2317e3dbd4f1a.json  query-3202b24b7fc8e7e37aa4f8379d7a1c194ed6ad7413ba3d8b275067a504f069f0.json  query-372aa48809201db5252bba86590f9db431fbd4c9e22eaf20b21b12d9fd1b7b26.json  query-3cf6f6eedc86be99f198e0f8837fd9c1e23dbbae1c5059a480eba079b8a45264.json  query-43eca57d439885720a4ff4070424b774a7854b26166c9ac2e915a365611ee059.json  query-46049e2c391f8864b1bc95446e3a415f13cf46a5f8b4eec2a5399f389af5176e.json  query-4749884c9d005a9188de44bfa59d86385b7188bc2cdba3f25bc1b1f6ec420064.json  query-5408ef7bf18c553cd79d843d8f71b6ed76c6b3e874f3dd0d0ca351096046a99f.json  query-56d30bcf39a6a9c8687a401e7b1497c6ba7f171b331c4f740875f6c6ed5ccdc8.json  query-5ad1e2ad229d0d49416c48723da77e28e8d3d4cc5125f2fd0748eb248c06dbe3.json  query-637f1f564c7986eb893d171e4c3d0bba05bf74c9e5252f493b34339a0300bea1.json  query-6cc8aeb88003160753a084390ce9d718187de03b1b5171774ebe30689da304ee.json  query-6ce4a9f7891abb2452136bef3a9d9065d452490dc7dde0d6f0590838f386f39c.json  query-77d1e42eb9ceb3b34381d79298cfe68d1f86f1e2cec0d14ff49e60f993fc842e.json  query-7d4f6d158a9bc77fad2e23becc2cb5409f5a99d2521b90e21edff8f3a2258277.json  query-819ccf08b112db55fb45fd6d3b1b101b631654630eff9f06197d0c038c2efe59.json  query-824d1f5c648b9a34d7afec4d2b83a6909b89580c782a565868f2f4de4c0a2253.json  query-8f76cab4056f0e7ca03cccb9b3760c714d0dbba32f088ffd54aa9ff88e63f02b.json  query-91de62335079105928dc21b6b28bd1d2c1e471c395b6fef7980585124ee37092.json  query-92305b123f62a4c742c8e88bacef21c129d8224e54778d1d785d610d0cdc1c7f.json  query-a5c3de7256c606fc44cab49e760d4b0e9ce653dce2a13b9c44ed7352f0623222.json  query-a7200d4e124fe84e97eb180a28b4658ae5b33f231672c8c35f6da9ce519a6854.json  query-a7c1c63623a8eec65d998fc147855d9622dc5100d110f8019ba84199b7f9023f.json  query-a89d87834e4db313ca0e7c0237ebb4831770f5b532e68c07aa0ba8119c3b4479.json  query-b679436ac38befade4b655522e4170a70c45afff79c6cc14a0c04dab28fd3335.json  query-d173548c65496b2576d2d0db9316009cca2cab6766d9975352f8af3e625ac05d.json  query-db9e154945b0012ac8abd013e0736fd5e15db5b3fb44babbad4cc8f7c897481f.json  query-e9e2e66c9c1d7ae467d6fb52f00cc0dda3c2431699b50226a41049cf160eabc8.json  query-edb54acfda64fae42df9a01d2c3debee5d78b7e03ea3ac79bffebdf5d65b7c3c.json  query-f2a9976f94fc886cccc39f23b8de57a8576590a84e532fa7b358c0862c277617.json  query-f4021ed5c0af6a8f62003383eb6bd7e44ef56cef841a23ed771944093287f5de.json  query-f626213731ca32afe3bdd5cb49bc905cf6427abaaf781df5084e03a50b0f500e.json  query-fbb4a1ded5f55f40cfc8db00a7d35a01144bd82d09e0cd538c6b619cac352e6a.json  (+3 more)
crates/bdp-server/benches/: search_performance.rs
crates/bdp-server/examples/: database_usage.rs  genbank_historical_ingestion.rs  genbank_version_discovery.rs  go_historical_ingestion.rs  interpro_historical_ingestion.rs  interpro_version_discovery.rs  refresh_search_index.rs  run_historical_ingestion.rs  run_uniprot_ingestion.rs  test_ftp_listing.rs  test_go_version_discovery.rs  test_interpro_historical.rs  test_interpro_ingestion.rs  test_multiversion.rs  test_parser.rs  test_storage_pipeline.rs  test_uniprot_ingestion.rs  uniprot_ingestion.rs  uniprot_pipeline_with_dedup.rs
crates/bdp-server/src/: config.rs  error.rs  lib.rs  main.rs
crates/bdp-server/tests/: README.md  api_integration_tests.rs  api_organizations_tests.rs  api_sources_tests.rs  api_tests.rs  audit_tests.rs  cqrs_integration_tests.rs  dat_parser_edge_cases_test.rs  db_tests.rs  e2e.rs  e2e_parser_tests.rs  ftp_integration_tests.rs  genbank_integration_test.rs  genbank_parser_test.rs  go_integration_test.rs  go_version_discovery_test.rs  ingestion_mode_tests.rs  interpro_storage_tests.rs  interpro_version_discovery_test.rs  middleware_tests.rs  migration_tests.rs  ncbi_ftp_debug_test.rs  ncbi_taxonomy_batch_test.rs  ncbi_taxonomy_historical_test.rs  ncbi_taxonomy_integration_test.rs  ncbi_taxonomy_orchestrator_test.rs  ncbi_taxonomy_parser_test.rs  organization_idempotency_test.rs  pipeline_dedup_tests.rs  query_tests.rs  resolve_tests.rs  search_integration_tests.rs  search_load_tests.rs  (+9 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+699 files in other folders)
