[package]
name = "bdp-ingest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "bdp_ingest"
path = "src/lib.rs"

[[bin]]
name = "bdp-ingest"
path = "src/main.rs"

[dependencies]
# ============================================================================
# Workspace Dependencies
# ============================================================================
bdp-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }

# ============================================================================
# HTTP Client
# ============================================================================
reqwest = { workspace = true }

# ============================================================================
# Database (optional for direct ingestion to DB)
# ============================================================================
sqlx = { workspace = true, optional = true }

# ============================================================================
# CLI Framework
# ============================================================================
clap = { workspace = true }

# ============================================================================
# Utilities
# ============================================================================
chrono = { workspace = true }
uuid = { workspace = true }

# ============================================================================
# Additional Ingest Dependencies
# ============================================================================
# XML parsing
quick-xml = { version = "0.37", features = ["serialize"] }

# HTML parsing and scraping
scraper = "0.20"
select = "0.6"

# Progress indicators
indicatif = "0.17"

# Async utilities
tokio-util = { version = "0.7", features = ["io", "codec"] }
tokio-stream = "0.1"

# File I/O
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

# CSV parsing
csv = "1.3"
csv-async = "1.3"

# JSON streaming
serde-jsonlines = "0.5"

[dev-dependencies]
# Testing
tempfile = "3.10"
wiremock = "0.6"

# Test utilities from workspace
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
# Enable database support for direct ingestion
database = ["sqlx"]
